--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.3.0",
     "mysql": "^2.18.1",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "stripe": "^14.18.0"
   }
 }
