--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mailtrap": "^3.3.0",
     "mysql": "^2.18.1",
     "serverless-http": "^3.2.0",
-    "stripe": "^14.18.0"
+    "stripe": "^14.18.0",
+    "ws": "^8.18.0"
   }
 }
